# python-cli

./: .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pylintrc  Makefile  README.md  Vagrantfile  pyproject.toml  requirements.txt  setup.py  vars.mk
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
contrib/docker/builder/debian/: pex.Dockerfile
contrib/docker/dev/alpine/: Dockerfile
contrib/gitpod/: Dockerfile
contrib/makefiles/pkg/base/: base.mk
contrib/makefiles/pkg/color/: color.mk
contrib/makefiles/pkg/functions/: functions.mk
contrib/makefiles/pkg/string/: string.mk
contrib/makefiles/targets/buildenv/: buildenv.mk
contrib/makefiles/targets/dependency/: dependency.mk
contrib/makefiles/targets/git/: git.mk
contrib/makefiles/targets/python/: python.mk
contrib/scripts/: add_shebang
contrib/scripts/utils/: add_shebang  print-wrap
project_template/: __main__.py  _version.py
project_template/basic_subcommand/: main.py  main_class.py
project_template/util/: animate_scatter.py  benchmarks.py  cli.py  log.py  tabulate.py
